--- a/proxmox/windows-server/install.html
+++ b/proxmox/windows-server/install.html
@@ -30,7 +30,7 @@
             </section>
         </div>
     </div>
-    <script src="../dist/reveal.js"></script>
+    <script src="../../dist/reveal.js"></script>
     <script>
 
         // Full list of configuration options:
